@@ -729,7 +729,7 @@ case $os in
 	      | -udi* | -eabi* | -lites* | -ieee* | -go32* | -aux* \
 	      | -cygwin* | -pe* | -psos* | -moss* | -proelf* | -rtems* \
 	      | -mingw32* | -linux-gnu* | -uxpv* | -beos* | -rhapsody* \
-	      | -openstep* | -mpeix* | -oskit*)
+	      | -openstep* | -mpeix* | -oskit* | -darwin* )
 	# Remember, each alternative MUST END IN *, to match a version number.
 		;;
 	-linux*)
