@@ -1,6 +1,6 @@
 PKG="cscope"
 NAME="cscope"
-VERSION="15.1 UW7.1.1 11/22/2000"
+VERSION="15.2b UW7.1.1 02/09/2001"
 CATEGORY="utilities"
 ARCH=i386
 PSTAMP=
